<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PostActivity"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:navigationIcon="@drawable/ic_back_button">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="25dp"
                android:fontFamily="@font/kaushan_script"
                android:padding="8dp"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="25sp" />

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:padding="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:text="@string/create_post"
            android:textColor="#5E75F6"
            android:textSize="30dp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbarThumbVertical="@android:color/transparent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:layout_weight="3"
                android:gravity="center|bottom"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginTop="40dp"
                    android:text="@string/post_username"
                    android:textColor="#5E75F6"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edit_round"
                    android:hint="user name"
                    android:padding="10dp"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/errorUsername"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:text="@string/error_username"
                    android:textColor="@color/hwid_auth_button_color_red"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginTop="15dp"
                    android:text="@string/post_shop_name"
                    android:textColor="#5E75F6"
                    android:textSize="18sp" />

                <AutoCompleteTextView xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/autocomplete_shop_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edit_round"
                    android:hint="shop name"
                    android:padding="10dp"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/errorSite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:layout_gravity="start"
                    android:layout_marginTop="10dp"
                    android:text="@string/error_site"
                    android:textColor="@color/hwid_auth_button_color_red"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginTop="15dp"
                    android:text="@string/post_description"
                    android:textColor="#5E75F6"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edit_round"
                    android:ems="10"
                    android:hint="description"
                    android:inputType="textMultiLine"
                    android:padding="10dp"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/errorReview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:layout_gravity="start"
                    android:layout_marginTop="10dp"
                    android:text="@string/error_review"
                    android:textColor="@color/hwid_auth_button_color_red"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btnPick"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/button_round"
                    android:text="@string/post_pick"
                    android:textColor="@color/white"
                    android:textSize="20dp" />

                <ImageSwitcher
                    android:id="@+id/imagesPost"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/edit_round" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/btnPrevious"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/post_previous"
                        android:textColor="@color/white"
                        android:background="@drawable/button_round"
                        android:textSize="20dp" />

                    <Button
                        android:id="@+id/btnNext"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="10dp"
                        android:text="@string/post_next"
                        android:background="@drawable/button_round"
                        android:textColor="@color/white"
                        android:textSize="20dp" />

                </RelativeLayout>

                <Button
                    android:id="@+id/btnSubmit"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/button_round"
                    android:text="@string/post_submit"
                    android:textColor="@color/white"
                    android:textSize="20dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginTop="15dp"
                    android:text="" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>