<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/parent"
    tools:context=".SiteActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:navigationIcon="@drawable/ic_back_button">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="25dp"
                android:fontFamily="@font/kaushan_script"
                android:padding="8dp"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="25sp" />

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/site_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="120dp"
        android:textSize="17sp"
        android:text="@string/site_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/site_name_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:visibility="gone"
        android:textSize="13sp"
        android:text="@string/please_provide_a_name"
        android:textColor="@color/hwid_auth_button_color_red"
        app:layout_constraintStart_toStartOf="@id/site_name"
        app:layout_constraintTop_toTopOf="@id/site_name"
        app:layout_constraintBottom_toBottomOf="@id/site_name"/>

    <EditText
        android:id="@+id/site_name_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="5dp"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/site_name"
        android:backgroundTint="#6C6A6A"/>

    <TextView
        android:id="@+id/site_type"
        android:labelFor="@id/autoComplete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:text="@string/site_type"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/site_name_edit" />

    <TextView
        android:id="@+id/site_type_error"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:textSize="13sp"
        android:text="@string/please_select_a_type"
        android:textColor="@color/hwid_auth_button_color_red"
        app:layout_constraintStart_toStartOf="@id/site_type"
        app:layout_constraintTop_toTopOf="@id/site_type"
        app:layout_constraintBottom_toBottomOf="@id/site_type"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/menu"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/site_type"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="10dp">

        <AutoCompleteTextView
            android:id="@+id/autoComplete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/site_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:textSize="17sp"
        android:text="@string/location"
        app:layout_constraintTop_toBottomOf="@id/menu"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/site_location_error"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:textSize="13sp"
        android:text="@string/please_specify_a_location"
        android:textColor="@color/hwid_auth_button_color_red"
        app:layout_constraintStart_toStartOf="@id/site_location"
        app:layout_constraintTop_toTopOf="@id/site_location"
        app:layout_constraintBottom_toBottomOf="@id/site_location"/>

    <fragment xmlns:map="http://schemas.android.com/apk/res-auto"
        android:id="@+id/mapFragment"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/site_location"
        android:layout_marginTop="10dp"
        map:mapType="normal"
        map:uiCompass="true"
        map:uiZoomControls="false"
        map:cameraTargetLat="48"
        map:cameraTargetLng="118"
        map:cameraZoom="2"
        class="com.huawei.hms.maps.MapFragment"/>

    <TextView
        android:id="@+id/location_latitude"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:textSize="13sp"
        app:layout_constraintTop_toBottomOf="@id/mapFragment"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/location_longitude"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="5dp"
        android:textSize="13sp"
        app:layout_constraintTop_toBottomOf="@id/location_latitude"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cornerRadius="75dp"
        android:elevation="50dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="10dp"
        app:backgroundTint="@color/hwid_auth_button_color_red"
        android:text="@string/save_site"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>